--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ aiogram = "^3.1.1"
 python-dotenv = "^1.0.0"
 openai = "^1.3.4"
 ics = "^0.7.2"
+sqlalchemy = "^2.0.23"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
