--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ openai = "^1.3.5"
 ics = "^0.7.2"
 sqlalchemy = "^2.0.23"
 alembic = "^1.12.1"
+aiosqlite = "^0.19.0"
+isort = "^5.12.0"
 
 
 [build-system]
