--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ sqlalchemy = "^2.0.23"
 alembic = "^1.12.1"
 aiosqlite = "^0.19.0"
 isort = "^5.12.0"
+pytesseract = "^0.3.10"
+opencv-python-headless = "^4.8.1.78"
 
 
 [build-system]
