--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ aiosqlite = "^0.19.0"
 isort = "^5.12.0"
 pytesseract = "^0.3.10"
 opencv-python-headless = "^4.8.1.78"
+uvicorn = "^0.25.0"
+fastapi = "^0.108.0"
+jinja2 = "^3.1.2"
 
 
 [build-system]
