--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ opencv-python-headless = "^4.8.1.78"
 uvicorn = "^0.25.0"
 fastapi = "^0.108.0"
 jinja2 = "^3.1.2"
+asyncpg = "^0.29.0"
+python-multipart = "^0.0.6"
 
 
 [build-system]
